fix: spacing of instructor name and photo

--- a/client/components/workshops/workshops.styl
+++ b/client/components/workshops/workshops.styl
@@ -36,9 +36,11 @@ $workshop-width = 400px
   .instructor
     color $secondary
     margin-bottom 0
+    margin-top 0
   img
     min-width 150px
     width 50%
+    margin-top 20px
 .instructor-info
   h4
     margin 0
